# py-mdd

./: .drone.yml  LICENSE  README.md  pyproject.toml
docs/: index.html  mdd.html
mdd/: __init__.py  mdd.py  nx.py
tests/: test_mdd.py  test_nx.py
