[tool.poetry]
name = "mdd"
version = "0.2.0"
description = "Python abstraction around Binary Decision Diagrams to implement Multivalued Decision Diagrams."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
repository = "https://github.com/mvcisback/py-mdd"
readme="README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
dd = "^0.5.5"
py-aiger-bv = "^4.3.0"
py-aiger-bdd = "^3.0.0"
py-aiger = "^6.1.1"
funcy = "^1.14"
networkx = {version = "^2.5", extras = ["nx"]}
bdd2dfa = {version="^1.0.0", extras = ["nx"]}

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-flake8 = "^1.0.6"
hypothesis = "^5.30.0"
pytest-cov = "^2.10.1"
codecov = "^2.1.9"
black = "^20.8b1"
pdoc3 = "^0.9.1"
networkx = "^2.5"
bdd2dfa = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
